--- a/src/client/src/styles/index.css
+++ b/src/client/src/styles/index.css
@@ -45,7 +45,6 @@ body {
 }
 
 .primary-btn {
-	height: 66px;
 	border: 3px solid #191919;
 	box-shadow: 0px 3px 0px #191919;
 }
@@ -71,4 +70,18 @@ body {
 
 .w-48p {
 	width: 48%;
+}
+
+.border-dark {
+	border: 3px solid #191919;
+}
+
+.custom-select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	background: transparent;
+	background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+	background-repeat: no-repeat;
+	background-position-x: 97%;
+	background-position-y: 50%;
 }
